--- a/mincat/build.gradle
+++ b/mincat/build.gradle
@@ -61,4 +61,5 @@ dependencies {
     // 视频播放框架
     compile 'fm.jiecao:jiecaovideoplayer:4.8.3'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.zhy:base-adapter:3.0.3'
 }
