更改UI样式01 增加列表播放视频

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -108,6 +108,10 @@
             android:name=".testui.TestAnnotation"
             android:launchMode="singleTask"
             android:theme="@style/ActivityThemeCrossPublicMaterial" />
+        <activity
+            android:name=".testui.video.VideoList"
+            android:launchMode="singleTask"
+            android:theme="@style/ActivityThemeCrossPublicMaterial" />
     </application>
 
 </manifest>
