--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,11 +65,11 @@
             android:launchMode="singleTask"
             android:theme="@style/ActivityThemeCrossPublicMaterial" />
         <activity
-            android:name=".testui.NetAct"
+            android:name=".testui.main.NetAct"
             android:launchMode="singleTask"
             android:theme="@style/ActivityThemeCrossPublicMaterial" />
         <activity
-            android:name=".testui.ChartsAct"
+            android:name=".testui.main.ChartsAct"
             android:launchMode="singleTask"
             android:theme="@style/ActivityThemeCrossPublicMaterial" />
         <activity
@@ -77,7 +77,7 @@
             android:launchMode="singleTask"
             android:theme="@style/ActivityThemeCrossPublicMaterial" />
         <activity
-            android:name=".testui.VideoAct"
+            android:name=".testui.main.VideoAct"
             android:launchMode="singleTask"
             android:theme="@style/ActivityThemeCrossPublicMaterial" />
         <activity
@@ -85,7 +85,7 @@
             android:launchMode="singleTask"
             android:theme="@style/ActivityThemeCrossPublicMaterial" />
         <activity
-            android:name=".testui.ImageCacheAct"
+            android:name=".testui.main.ImageCacheAct"
             android:launchMode="singleTask"
             android:theme="@style/ActivityThemeCrossPublicMaterial" />
         <activity
@@ -110,6 +110,10 @@
             android:theme="@style/ActivityThemeCrossPublicMaterial" />
         <activity
             android:name=".testui.video.VideoList"
+            android:launchMode="singleTask"
+            android:theme="@style/ActivityThemeCrossPublicMaterial" />
+        <activity
+            android:name=".testui.TestOperationAdapterAct"
             android:launchMode="singleTask"
             android:theme="@style/ActivityThemeCrossPublicMaterial" />
     </application>
